Support for searching by function name

--- a/MemoryCrawler/MemoryCrawler.xcodeproj/xcshareddata/xcschemes/UnityProfiler.xcscheme
+++ b/MemoryCrawler/MemoryCrawler.xcodeproj/xcshareddata/xcschemes/UnityProfiler.xcscheme
@@ -64,6 +64,10 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "/Users/larryhou/Documents/MemoryProfiler/__pfc/20190505191651_PERF.pfc"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Users/larryhou/Documents/MemoryProfiler/__pfc/20190506163951_PERF.pfc"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
