更新对Windows的支持

--- a/MemoryCrawler/CMakeLists.txt
+++ b/MemoryCrawler/CMakeLists.txt
@@ -55,11 +55,13 @@ endfunction()
 include_directories("${PROJECT_SOURCE_DIR}/MemoryCrawler")
 include_directories("${PROJECT_SOURCE_DIR}/MemoryCrawler/libsqlite3")
 include_directories("${PROJECT_SOURCE_DIR}/MemoryCrawler/Crawler")
+include_directories("${PROJECT_SOURCE_DIR}/MemoryCrawler/md5")
 include_directories("${PROJECT_SOURCE_DIR}/UnityProfiler")
 include_directories("${PROJECT_SOURCE_DIR}/UnityProfiler/Crawler")
 
 add_subdirectory(MemoryCrawler)
 add_subdirectory(MemoryCrawler/Crawler)
 add_subdirectory(MemoryCrawler/libsqlite3)
+add_subdirectory(MemoryCrawler/md5)
 add_subdirectory(UnityProfiler)
 add_subdirectory(UnityProfiler/Crawler)
