--- a/MemoryCrawler/MemoryCrawler/CMakeLists.txt
+++ b/MemoryCrawler/MemoryCrawler/CMakeLists.txt
@@ -5,11 +5,15 @@ file(GLOB PROJ_HEADERS "*.h" "./Crawler/*.h")
 source_group("Headers" FILES ${PROJ_HEADERS})
 
 # set output path
-if (CMAKE_BUILD_TYPE MATCHES "Debug")
-    set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin/Debug")
-else(CMAKE_BUILD_TYPE MATCHES "Debug")
-    set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin/Release")
-endif(CMAKE_BUILD_TYPE MATCHES "Debug")
+if(WIN32 OR MSVC)
+    set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
+else()
+    if (CMAKE_BUILD_TYPE MATCHES "Debug")
+        set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin/Debug")
+    else(CMAKE_BUILD_TYPE MATCHES "Debug")
+        set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin/Release")
+    endif(CMAKE_BUILD_TYPE MATCHES "Debug")
+endif()
 
 add_library(
     MemoryCrawler_Lib
@@ -27,4 +31,5 @@ target_link_libraries(
     MemoryCrawler
     Sqlite3
     MemoryCrawler_Crawler
+    md5
 )
